--- a/www/index.html
+++ b/www/index.html
@@ -78,13 +78,7 @@
 				</div>	
 			</div>
 		</div>
-
-		<!--==== Footer ==== -->
-		<div data-role="footer">
-		<h5>DSA 2016</h5>
-		</div>
-
-	</div><!-- End main container-->
+	</div><!-- end main container-->
 
 <!-- Include Angular & Module JS -->
 <script type="text/javascript" src="angular.min.js"></script>
